MODDICONV-436 - Set Authority DELETE job/action/field mapping profiles to display via Settings > Data import (#93)
* Added script to update default job, action and match profiles for MARC-Authority deletion

* Fixed flaky test that fails depending on tests class execution order by preventing side effects between tests